2.2.6
-----
o Fixes #5195 - USING INDEX hints breaks some queries

2.2.5
-----
o Fixes #4907 - Result.columnAs should throw exception on invalid column name
o Fixes #4988 - predicate exceptions should be ignored for non-matching rows
o Fixes #5114 - lower case exponent e unsupported
o Fixes #4937 - ORDER BY scope bug
o Detects and uses BOM (byte-order-mark) headers in CSV files when running LOAD CSV

2.2.4
-----
o DbHits for property lookups reduced to one per lookup
o Identifiers are properly exposed in nested foreach clauses
o Better eviction policy for the plan cache
o Fixes #4673 - index seeks experience nulls from IN

2.2.3
-----
o Returns nice error message when using aggregation inside
  of expressions that loop over collections
o Fixes #4758 - OPTIONAL MATCH when either side is null
o Fixes problem with projection of named paths
o Identifiers in scope of ORDER BY are no longer lost in rewriting

2.2.2
-----
o Fixes problem when using named paths and aggregation
o Fixes #4462 - RULE planner inconsistent in order of path elements
o Fixes problem with COST planner and ()-[*0..0]->() patterns
o Fixes problem when ordering on an aggregation function
o Fixes planning around indexes in COST planner
o Fixes planning of disconnected shortestpath in RULE planner
o Fixes type of varlength identifier to be collection of relationships

2.2.1
-----
o NOTE: Support for Cypher version 2.0 and 2.1 will be removed in Neo4j 2.3
o Fixes #4315 - UNWIND not binding to identifier
o Fixes #4341 - START clause ignores associated WHERE
o Fixes #4331 - Alleged duplicate result column names
o Fixes #4342 - NameSpacing Identifiers in StartItem which are not in scope
o Fixes #4332 - ORDER BY not seeing identifiers from earlier scope
o Fixes problems with relationships passing through WITH in RULE planner

2.2.0
-----
o Fixed problem where undirected paths weren't being properly projected
o Introduced DP based algorithm as a planner option