@@ -23,13 +23,13 @@ import org.neo4j.cypher.internal.compiler.v2_2.planner.logical.{Cardinality, Sel
 import org.neo4j.cypher.internal.compiler.v2_2.{LabelId, PropertyKeyId, RelTypeId}
 
 object GraphStatistics {
-  val DEFAULT_RANGE_SELECTIVITY          = Selectivity(0.3)
-  val DEFAULT_PREDICATE_SELECTIVITY      = Selectivity(0.75)
-  val DEFAULT_EQUALITY_SELECTIVITY       = Selectivity(0.1)
+  val DEFAULT_RANGE_SELECTIVITY          = Selectivity.of(0.3).get
+  val DEFAULT_PREDICATE_SELECTIVITY      = Selectivity.of(0.75).get
+  val DEFAULT_EQUALITY_SELECTIVITY       = Selectivity.of(0.1).get
   val DEFAULT_NUMBER_OF_ID_LOOKUPS       = Cardinality(25)
   val DEFAULT_NUMBER_OF_INDEX_LOOKUPS    = Cardinality(25)
   val DEFAULT_LIMIT_CARDINALITY          = Cardinality(75)
-  val DEFAULT_REL_UNIQUENESS_SELECTIVITY = Selectivity(1.0 - 1 / 100 /*rel-cardinality*/)
+  val DEFAULT_REL_UNIQUENESS_SELECTIVITY = Selectivity.of(1.0 - 1.0 / 100 /*rel-cardinality*/).get
 }
 
 trait GraphStatistics {
