@@ -25,27 +25,27 @@ import org.neo4j.cypher.internal.compiler.v2_2.planner.logical.Selectivity
 class SelectivityCombinerTest extends CypherFunSuite {
 
   test("should not lose precision for intermediate numbers") {
-    val selectivities = Seq(Selectivity(1e-10), Selectivity(2e-10))
+    val selectivities = Seq(Selectivity.of(1e-10).get, Selectivity.of(2e-10).get)
 
-    IndependenceCombiner.orTogetherSelectivities(selectivities).get should not equal Selectivity(0)
+    IndependenceCombiner.orTogetherSelectivities(selectivities).get should not equal Selectivity.ZERO
   }
 
   test("should not lose precision for small numbers") {
-    val selectivities = Seq(Selectivity(1e-100), Selectivity(2e-100), Selectivity(1e-300))
+    val selectivities = Seq(Selectivity.of(1e-100).get, Selectivity.of(2e-100).get, Selectivity.of(1e-300).get)
 
-    IndependenceCombiner.orTogetherSelectivities(selectivities).get should not equal Selectivity(0)
+    IndependenceCombiner.orTogetherSelectivities(selectivities).get should not equal Selectivity.ZERO
   }
 
   test("ANDing together works as expected") {
-    val selectivities = Seq(Selectivity(.1), Selectivity(.2), Selectivity.ONE)
+    val selectivities = Seq(Selectivity.of(.1).get, Selectivity.of(.2).get, Selectivity.ONE)
 
-    IndependenceCombiner.andTogetherSelectivities(selectivities).get should equal(Selectivity(0.02))
+    IndependenceCombiner.andTogetherSelectivities(selectivities).get should equal(Selectivity.of(0.02).get)
   }
 
   test("ORing together works as expected") {
-    val selectivities = Seq(Selectivity(.1), Selectivity(.2))
+    val selectivities = Seq(Selectivity.of(.1).get, Selectivity.of(.2).get)
 
-    IndependenceCombiner.orTogetherSelectivities(selectivities).get should equal(Selectivity(0.28))
+    IndependenceCombiner.orTogetherSelectivities(selectivities).get should equal(Selectivity.of(0.28).get)
   }
 
 }
