@@ -1,5 +1,6 @@
 2.2.6
 -----
+o Fixes #5336 - Properly handle matching on multiple labels
 o Fixes #5195 - USING INDEX hints breaks some queries
 
 2.2.5
